infra/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-logging-client-deployment
spec:
  replicas: 0
  selector:
    matchLabels:
      component: test-logging-client
  template:
    metadata:
      labels:
        component: test-logging-client
    spec:
      containers:
      - name: test-logging-client
        image: gcr.io/papaya-testing-project/test-logging-client-deployment:v1
        resources:
          requests:
              memory: "256Mi"
              cpu: "62m"
          limits:
            memory: "512Mi"
            cpu: "93m"
        ports:
        - containerPort: 3000
