infra/payments-micro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-logging-payment-service
spec:
  type: ClusterIP
  selector:
    component: test-logging-payment
  ports:
    - port: 3001
      targetPort: 3001
