infra/users-micro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-logging-users-service
spec:
  type: ClusterIP
  selector:
    component: test-logging-users
  ports:
    - port: 3002
      targetPort: 3002
